--- a/Phase 1/Phase1.html
+++ b/Phase 1/Phase1.html
@@ -159,17 +159,17 @@
   <span>Shopping Bill </span>
   <div class="bill">
     <ul>
-      <li><span><span class="item-desc">Item1</span> <span class="price">Rs. 0.00/-</span></span>
+      <li><span><span class="item-desc">Nike Shoes</span> <span class="price">Rs. 2000.00/-</span></span>
       </li>
-      <li><span><span class="item-desc">Item2</span> <span class="price">Rs. 0.00/-</span></span>
+      <li><span><span class="item-desc">Fogg Deodrants</span> <span class="price">Rs. 500.00/-</span></span>
       </li>
-      <li><span><span class="item-desc">Item3</span> <span class="price">Rs. 0.00/-</span></span>
+      <li><span><span class="item-desc">Canon DSLR</span> <span class="price">Rs. 50000.00/-</span></span>
       </li>
-      <li><span><span class="item-desc">Item4</span> <span class="price">Rs. 0.00/-</span></span>
+      <li><span><span class="item-desc">Networking Book</span> <span class="price">Rs. 800.00/-</span></span>
       </li>
     </ul>
     <span class="total-amount">
-      Rs. 0.00/-
+      Rs. 53300.00/-
     </span>
   </div>
 
