--- a/Phase2.html
+++ b/Phase2.html
@@ -56,7 +56,7 @@
       </div>
 <!--       item 3 -->
         <div class="item">
-        <a href="#"><img src="img/meizu_m2.jpg" /></a>
+        <a href="#"><img src="http://image.priceprice.k-img.com/global/images/product/mobilephones/MEIZU_m2_note/MEIZU_m2_note_L_1.jpg" /></a>
         <div class="details">
           <h2>Meizu m2 Cell Phone</h2>
           <p>Mobile Phone</p>
@@ -167,6 +167,8 @@
   </div>
 
 </div>
+
+
 <!-- #################################### END ########################################### -->
 <script type="text/javascript" src="js/script.js"></script>
 </body>
