--- a/Phase2.html
+++ b/Phase2.html
@@ -2,7 +2,6 @@
 <head>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
 		integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 		crossorigin="anonymous"></script>
@@ -13,7 +12,7 @@
 <body>
 <div class="header">
   <span>Online Shopping<span>
-  <span class="fa fa-shopping-cart"> Cart</span>
+    <span class="fa fa-shopping-cart"> Cart <span id="item-count">0</span></span>
 </div>
 
 <div class=content>
@@ -161,6 +160,7 @@
   <div class="product">
   </div>	
 
+    <br>
     <span><b>TOTAL</b></span>&nbsp;&nbsp;<span class="fa fa-arrow-right"></span>&nbsp;&nbsp;<span id="test" class="total">
    
     </span>
@@ -170,6 +170,6 @@
 
 
 <!-- #################################### END ########################################### -->
-<script type="text/javascript" src="js/script.js"></script>
+
 </body>
 </html>
