fix - undo js/script.js line deletion

--- a/Phase2.html
+++ b/Phase2.html
@@ -170,6 +170,6 @@
 
 
 <!-- #################################### END ########################################### -->
-
+<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
